[package]
name = "jdks"
version = "0.1.3"
authors = ["XS <tonycody@qq.com>"]
edition = "2021"
description = "This is a JDK package management tool, based on Rust."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tonycody/jdks"
repository = "https://github.com/tonycody/jdks"
categories = ["command-line-utilities"]
keywords = ["cli", "jdk", "openjdk", "java"]
documentation = "https://docs.rs/jdks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
proc-macro2 = "1.0.78"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
dirs = "5.0.1"
exitcode = "1.1.2"
fs_extra = "1.3.0"
predicates = "3.1.0"
serial_test = "3.0.0"
symlink = "0.1.0"
tempfile = "3.10.0"
textwrap = "0.16.0"